fix(markup): prevent native validation message from covering radio/checkbox

--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -205,11 +205,19 @@
 /* #region checker */
 
 .checker {
+  position: relative;
   display: inline-block;
 }
 
 .checker__label {
   display: block;
+}
+
+.checker__control {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .checker__control[type="checkbox"]:enabled + .checker__label {
